Fixed anchor spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -503,6 +503,7 @@ table td:first-child {
       -ms-flex-pack: justify;
           justify-content: space-between;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .flexbox *:nth-child(1) {
