--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -24,7 +24,7 @@ main {
         margin-top: -4.6875rem;
 
         @include breakpoint-up(large){
-            height: 1rem; // 20px
+            height: 1rem;
             margin-top: -1rem;
         }
     }
@@ -187,6 +187,7 @@ table {
     display: flex;
     justify-content: space-between;
     gap: 1rem;
+    margin-bottom: 1rem;
 
     *:nth-child(1) {
         flex: 0 1 auto;
